# XLNC_ENVIRO_PIPE_CALC

./: .gitignore  ALL_MODULES_COMPLETE_REPORT.md  CALCULATION_LOGIC_REVIEW.md  FRONTEND_ALL_MODULES_COMPLETE.md  FRONTEND_TEST_REPORT.md  FRONTEND_UI_MODULE1_COMPLETE.md  HERO_IMAGE_SPECIFICATIONS.md  HUONG_DAN_STITCH_UI_DESIGN.md  HƯỚNG_DẪN_SỬ_DỤNG_PROMPT.md  INTEGRATION_TEST_RESULTS.md  NETLIFY_DEPLOY_GUIDE.md  PHÂN_TÍCH_TÀI_LIỆU_VÀ_CÂU_HỎI.md  PROGRESS_REPORT.md  PROJECT_SETUP_SUMMARY.md  PROMPT_ACTIVATION_WEB_DEVELOPMENT.md  PROMPT_FOR_NEW_CONVERSATION.md  PROMPT_ĐỌC_TÀI_LIỆU_VÀ_TẠO_FAKE_DATA.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  START_HERE.md  STITCH_DESCRIPTION_TEMPLATES.md  STITCH_INTEGRATION_SUMMARY.md  State-of-the-art.md  TEMPLATE_PROMPT_KÍCH_HOẠT.md  TEST_GUIDE.md  TEST_RESULTS.md  Tham khảo.md  User_Rules_ver03.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_integration.sh
MASTER_PROMPT/: 00_INDEX.md  10_CANONICAL_GLOBAL_SUMMARY.md  MASTER_PROMPT.md  PhầnII_Role&Behavior.md  PhầnIV_Domain_Knowledge_Base.md  PhầnI_Introduction.md  PhầnVIII_Logging_Monitoring&Observability.md  PhầnVI_Workflow.md
System_Prompt/: LOADING_INSTRUCTIONS.md  MASTER_PROMPT_SYSTEM.md  RETRIEVAL_LOOP_PROMPT.md
System_Rules/: GLOBAL_ENFORCEMENT_SYSTEM.md
Workspace_Rules/: CHUNK_NAMING_CONVENTION.md  FOLDER_STRUCTURE.md
app/: main.py
backend/: .gitignore  HUONG_DAN_CHAY_BACKEND.md  START_SERVER.md  alembic.ini  requirements.txt  start.sh  test_all_modules.py  test_module1.py
docs/: Báo_cáo_tổng_hợp_Hệ_thống_xử_lý_nước.md  (+5 more)
(+179 files in other folders)
